# tem-ir-model

./: .gitignore  CLAUDE.md  PRD.md  README.md  cli.py  pyproject.toml  sim_bonds.parquet  sim_cash.parquet
.claude/: settings.local.json
api/: main.py  requirements.txt
api/models/: __init__.py  asset_allocation.py  asset_class_return.py  assumptions.py  assumptions_override.py  base.py  comparison.py  core_contribution_tier.py  defaults.py  global_defaults.py  irs_warning.py  match_tier.py  monte_carlo_config.py  persona.py  plan_design.py  scenario.py  simulation_result.py  ss_estimator.py  vesting.py  withdrawal_strategy.py  workforce_analysis.py  workspace.py
api/routers/: comparisons.py  global_settings.py  health.py  scenarios.py  simulations.py  ss_estimate.py  workforce_analysis.py  workspace_archive.py  workspaces.py
api/services/: comparison_service.py  config_resolver.py  excel_export_service.py  exceptions.py  export_import_service.py  irs_validator.py  scenario_matrix_loader.py  scenario_service.py  simulation_engine.py  (+3 more)
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
data/: sim_stocks.parquet
examples/: AnalyticsDashboard.tsx  BatchProcessing.tsx  ConfigStudio.tsx  CostComparison.tsx  DCPlanAnalytics.tsx  DCPlanComparisonSection.tsx  Dashboard.tsx  Layout.tsx  NDTTesting.tsx  PlanDesignModal.tsx  ScenarioComparison.tsx  ScenarioCostComparison.tsx  ScenariosPage.tsx  SimulationControl.tsx  SimulationDetail.tsx  VestingAnalysis.tsx  WorkspaceManager.tsx
tests/: test_global_settings.py
(+224 files in other folders)
