[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tem-ir-model"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "openpyxl>=3.1,<4"]

[project.scripts]
ir-model = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib", "--strict-markers", "-ra"]
testpaths = ["tests"]
